# data_agregator

./: pyproject.toml  run.py
psql_db/: paql_connect.py
query_data/: binance.py  qu_main.py  rds_storing.py
rds_db/: rds_connect.py
validation_data/: processing.py  va_main.py  verification.py
