[tool.poetry]
name = "data-aggregator"
version = "0.1.0"
description = ""
authors = ["Valerian <@VelValerian>"]
readme = "README.md"
packages = [{include = "data_aggregator"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.2"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
